Fix IE 6/7 layout issues

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,3 +1,10 @@
 .header__title {
   margin: 0;
 }
+
+@include ie(6) {
+  .header img {
+    width: 249px;
+    height: 79px;
+  }
+}
