--- a/app/assets/stylesheets/components/_journey-promo.scss
+++ b/app/assets/stylesheets/components/_journey-promo.scss
@@ -23,6 +23,10 @@
   border-left: 1px solid #e2e2e2;
   min-height: 50px;
 
+  @include ie(6) {
+    height: 50px;
+  }
+
   @include media(tablet) {
     min-height: 60px;
 
